# N-Puzzles

./: CMakeLists.txt  main.cpp
src/: A_star_solver.cpp  A_star_solver.h  BFS_solver.cpp  BFS_solver.hpp  FileInputReader.cpp  FileInputReader.h  Pattern_generator.cpp  Pattern_generator.hpp  Solution_printer.cpp  Solution_printer.hpp  Solvability_verifier.cpp  Solvability_verifier.hpp  main.cpp
